# mepe

./: .env.example  .env.postgres  DEPLOYMENT.md  Dockerfile  build_files.sh  extract_data.py  farsl_fixtures.json  mcust_fixtures.json  migrate_data.py  migrate_dev.py  models.py  mysql_to_postgres.py  pcust_fixtures_1.json  pcust_fixtures_2.json  pcust_fixtures_3.json  pcust_fixtures_4.json  pcust_fixtures_5.json  pcust_fixtures_6.json  pcust_fixtures_7.json  pcust_fixtures_8.json  pcust_fixtures_9.json  pyproject.toml  render.yaml  requirements.txt  test_fixtures.json  vercel.json
backend/: settings.py  urls.py  wsgi.py
static/: test.txt
static/web/js/: view-toggle.js
static_optimized/: optimization_report.json
static_optimized/web/js/: main.js
staticfiles/web/js/: view-toggle.js
web/: admin.py  models.py  urls.py  views.py
web/management/: __init__.py
web/management/commands/: migrate_data.py  optimize_static.py  transfer_data.py
web/migrations/: 0001_initial.py  0002_alter_webfarsl_options_alter_webmcust_options_and_more.py
web/static/web/images/: README.md
web/templates/web/: base.html  checkaccount.html  particulars.html
