[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=22.0.0",
    "python-decouple>=3.8",
    "whitenoise>=6.6.0",
    "dj-database-url>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"